Thu Jan 15 23:55:15 2015  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_close_m): Don't raise when the IO object is closed.
	  [ruby-core:67444] [Feature #10718]

Thu Jan 15 21:34:57 2015  Seiei Higa  <hanachin@gmail.com>

	* proc.c (rb_obj_singleton_method): Kernel#singleton_method should
	  not use refinements, as well as Kernel#method.
	  [ruby-core:67603] [Bug #10744]

Thu Jan 15 10:45:04 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_select_bang, ary_reject_bang): linear
	  performance.  [ruby-core:67418] [Feature #10714]

Wed Jan 14 18:06:06 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* lib/uri/mailto.rb: raising URI::InvalidComponentError instead
	  of failing with undefined method `split' for nil:NilClass for
	  mailto: URIs without opaque part. [Bug #10738]
	* test/uri/testuri.rb: Test for above

Wed Jan 14 16:45:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/downloader.rb (RubyGems.download): verify downloaded gem
	  packages.  LowSecurity to allow untrusted certificates now.

Wed Jan 14 15:43:48 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/readline.c (readline_s_refresh_line): initialize
	  before rl_refresh_line(), as some function make the internal
	  state non-clean but rl_refresh_line() does not re-initialize it.
	  [ruby-core:43957] [Bug #6232]

Tue Jan 13 21:59:24 2015  Michal Papis  <mpapis@gmail.com>

	* tool/rbinstall.rb (gem): fix changing permissions of installed
	  bundled gems.  [Fix GH-812]

Tue Jan 13 21:57:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (distclean-local): remove autom4te.cache generated by
	  autoconf.

	* common.mk (realclean-local): remove id sources and dummy header
	  for dtrace.  [ruby-core:67562] [Bug #10737]

Tue Jan 13 21:08:22 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/json, test/json: merge JSON HEAD(259dee6)
	  separate implementation of Typed_Data macro.
	  https://github.com/flori/json/compare/v1.8.1...v1.8.2
